--- a/zy-frame/src/main/res/values/strings.xml
+++ b/zy-frame/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="loading_error_text">加载失败，请稍后再试</string>
     <string name="loading_empty_text">暂无数据</string>
     <string name="loading_retry_text">点击重试</string>
+
+    <string name="all_phone_album">全部相册</string>
+    <string name="max_select">最多选择%s张图片</string>
+    <string name="msg.no_snack_showing">No Snack Showing</string>
+    <string name="msg.snack_cleared">Snack Cleared</string>
+    <string name="select_confirm">确定</string>
 </resources>
